--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,8 +7,11 @@ spring:
       database: twitter
       username: twitter
       password: twitterPassword
-
-
+  aws:
+    sqsUrl: ${AWS_SQS_URL}
+    accessKey: ${AWS_ACCESS_KEY}
+    accessKeySecret: ${AWS_ACCESS_KEY_SECRET}
+    region: ${AWS_REGION}
 ---
 spring:
   profiles: kube
